* Reworked the server and added a new processor that handles the HTTP 1.1 request and response * Simplified the select method * Protected the selection against exceptions * Added logging interfaces and simple stdout implementation. Removed our last dependency! * Added cookie parsing and attributes * Added parameter parsing and fixing up the request object to handle headers properly * Threading fixes so that the streams block correctly * Handling failure cases better so that the server can respond with 500 depending on what the Handler has written back